# bazel-swift-exploration

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  Makefile  README.md  WORKSPACE  extensions.bzl  repositories.bzl
infra/patches/: build_event_stream_java_proto.patch  publish_build_event_proto.patch
src/bep/: BUILD  README.md
src/bep/BEPCommands/: BUILD
src/bep/BEPCommands/Sources/: ExtractXCResultCommand.swift  ParseCommand.swift  RootCommand.swift
src/bep/BEPCore/: BUILD
src/bep/BEPCore/Sources/: BEPParser.swift
src/bep/BESServer/: BUILD
src/bep/BESServer/Health/: health.proto
src/bep/BESServer/Sandbox/: main.swift
src/bep/BESServer/Server/: main.swift
src/bep/BESServer/Sources/: PublishBuildEventProvider.swift  PublishBuildEventServer.swift  PublishBuildEventServerInterceptorFactory.swift
src/bep/Fixtures/: BUILD
src/bep/Fixtures/Sources/: ExampleTests.swift
src/credential_helper/: README.md
src/credential_helper/CredentialHelperCommands/: BUILD
src/credential_helper/CredentialHelperCommands/Sources/: GetCommand.swift  RootCommand.swift
src/sandbox/: BUILD
src/sandbox/Sources/: main.swift
src/sandbox/Sources/Extension/: Encodable.swift
src/sandbox/Sources/Model/: AssertMocksBody.swift  FailTestBody.swift  SetUpBody.swift  SourceFileManifest.swift  TestBodySubject.swift  TestFileContent.swift  TestInitBody.swift
src/sandbox/Sources/Utility/: RenderService.swift  TemplateFactory.swift
src/test_target_harness/Commands/: BUILD
src/test_target_harness/Commands/Sources/: GenerateTestTargetCommand.swift  RootCommand.swift
src/test_target_harness/Example/: BUILD
src/test_target_harness/Infra/: test_target_harness.bzl
src/test_undeclared_outputs/: README.md
src/test_undeclared_outputs/Commands/: BUILD
src/test_undeclared_outputs/Commands/Sources/: ExtractSnapshotsCommand.swift  RootCommand.swift
src/test_undeclared_outputs/Example/: BUILD
src/test_undeclared_outputs/Patches/: ExampleTests_isRecording.patch
src/test_undeclared_outputs/TestKit/: BUILD
src/xcresult/: README.md
src/xcresult/XCResultCommands/: BUILD
src/xcresult/XCResultParser/: BUILD
(+16 files in other folders)
